[gd_scene load_steps=11 format=3 uid="uid://cxd4yy8a78fru"]

[ext_resource type="Script" path="res://entities/actors/alchemist_hand/alchemist_hand.gd" id="1_jhckl"]
[ext_resource type="Texture2D" uid="uid://cn8c2cx0gq83t" path="res://entities/actors/alchemist_hand/wizard_hand.png" id="2_d5f01"]
[ext_resource type="Texture2D" uid="uid://6c64iloc22k0" path="res://entities/actors/alchemist_hand/wizard_hand_1.png" id="3_jbnxv"]
[ext_resource type="Texture2D" uid="uid://dxdvk5xwrj7iw" path="res://entities/actors/alchemist_hand/wizard_grabbing.png" id="4_0pclc"]
[ext_resource type="AudioStream" uid="uid://li3j10uvpksc" path="res://placeholder.wav" id="5_iuu17"]
[ext_resource type="AudioStream" uid="uid://ck871s0y4g667" path="res://entities/actors/alchemist_hand/WOBWOBWOB.wav" id="6_fsjrr"]

[sub_resource type="SpriteFrames" id="SpriteFrames_1b87b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_d5f01")
}, {
"duration": 1.0,
"texture": ExtResource("3_jbnxv")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_0pclc")
}],
"loop": true,
"name": &"grabbing",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_gtudt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_1qenm"]
resource_name = "throw"
length = 1.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9, 1.4),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [0.0, -0.785398, 0.872665]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"throw_target"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ksenm"]
_data = {
"RESET": SubResource("Animation_gtudt"),
"throw": SubResource("Animation_1qenm")
}

[node name="Wizard_Hand" type="Node2D" groups=["hand"]]
script = ExtResource("1_jhckl")
maximum_distance = 600.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 4
texture_filter = 1
position = Vector2(-3.00001, -144)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_1b87b")
autoplay = "default"
offset = Vector2(2.08165e-12, 40)

[node name="HoldPoint" type="Node2D" parent="AnimatedSprite2D"]
position = Vector2(-3.53552, 70.7107)

[node name="Refactory" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HoldWait" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ksenm")
}

[node name="TillDeath" type="Timer" parent="."]
one_shot = true

[node name="Throw" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_iuu17")
max_distance = 700.0

[node name="Grab" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_iuu17")
max_distance = 600.0

[node name="Coming" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_fsjrr")
autoplay = true
max_distance = 450.0
panning_strength = 1.5
